--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "json-quick-tools",
   "description": "Functions to easily parse/format JSON from the text editor",
   "repository": "https://github.com/sidhique/json-quick-tools",
+  "publisher": "Sidhique",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.100.0"
